--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -7,6 +7,7 @@
     "spacing": 4, // Gaps between modules (4px)
     // Choose the order of the modules
     "modules-left": [
+        "custom/apple",
         "sway/workspaces",
         "sway/mode",
         "sway/scratchpad",
@@ -61,6 +62,10 @@
     },
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
+    },
+    "custom/apple": {
+        "format": "",
+        "tooltip": false
     },
     "sway/scratchpad": {
         "format": "{icon} {count}",
