--- a/waybar/config.jsonc
+++ b/waybar/config.jsonc
@@ -7,7 +7,7 @@
     "spacing": 4, // Gaps between modules (4px)
     // Choose the order of the modules
     "modules-left": [
-        "custom/apple",
+        "custom/fedora",
         "sway/workspaces",
         "sway/mode",
         "sway/scratchpad",
@@ -63,9 +63,8 @@
     "sway/mode": {
         "format": "<span style=\"italic\">{}</span>"
     },
-    "custom/apple": {
-        "format": "",
-        "tooltip": false
+    "custom/fedora": {
+        "exec": "bash -c 'echo  Fedora   $(grep ^VERSION_ID= /etc/os-release | cut -d= -f2)'",        "tooltip": false
     },
     "sway/scratchpad": {
         "format": "{icon} {count}",
