Continue configuring stuff (mostly rofi)

--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -153,6 +153,13 @@ animations {
 # windowrulev2 = bordersize 0, floating:0, onworkspace:f[1]
 # windowrulev2 = rounding 0, floating:0, onworkspace:f[1]
 
+# layerrule = noanim, nwg-dock-hyprland
+# layerrule = ignorezero, nwg-dock-hyprland
+# windowrulev2 = workspace special silent, class:^(nwg-dock-hyprland)$
+
+# monitor=HDMI-A-1, preferred, auto,1,\
+# monitor= DP-1,preferred,auto,1
+
 # See https://wiki.hyprland.org/Configuring/Dwindle-Layout/ for more
 dwindle {
     pseudotile = true # Master switch for pseudotiling. Enabling is bound to mainMod + P in the keybinds section below
