--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -87,7 +87,6 @@ general {
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#decoration
-layerrule = blur,waybar
 
 decoration {
     rounding = 10
@@ -96,21 +95,21 @@ decoration {
     active_opacity = 1.0
     inactive_opacity = 0.98
 
-    shadow {
-        enabled = true
-        range = 4
-        render_power = 3
-        color = rgba(1a1a1aee)
-    }
+    # shadow {
+    #     enabled = true
+    #     range = 4
+    #     render_power = 3
+    #     color = rgba(1a1a1aee)
+    # }
 
     # https://wiki.hyprland.org/Configuring/Variables/#blur
-    blur {
-        enabled = true
-        size = 3
-        passes = 2
+    # blur {
+    #     enabled = true
+    #     size = 3
+    #     passes = 2
 
-        vibrancy = 0.1696
-    }
+    #     vibrancy = 0.1696
+    # }
 }
 
 # https://wiki.hyprland.org/Configuring/Variables/#animations
