--- a/hyprland/hyprland.conf
+++ b/hyprland/hyprland.conf
@@ -43,9 +43,9 @@ $menu = wofi --show drun
 # Or execute your favorite apps at launch like this:
 
 exec-once = $terminal
-exec-once = waybar
+# exec-once = waybar
 # exec-once = nm-applet &
-# exec-once = waybar & hyprpaper & firefox
+exec-once = waybar & hyprpaper & librewolf
 
 
 #############################
